--- a/Como_criar_um_Gráfico_de_Waffle_no_Python.ipynb
+++ b/Como_criar_um_Gráfico_de_Waffle_no_Python.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "Se o nome não é familiar, com certeza você já viu vários exemplos de *waffle charts* em sites, revistas e jornais, pois eles não apenas transmitem informações claramente, mas são visualmente mais impactantes que gráficos de barras ou pizza.\n",
         "\n",
-        "<center><img src=\"http://sigmoidal.ai/wp-content/uploads/2019/10/grafico_de_waffle.png\" height=\"250px\"></center>\n",
+        "<img src=\"http://sigmoidal.ai/wp-content/uploads/2019/10/grafico_de_waffle.png\" height=\"250px\">\n",
         "\n",
         "A figura acima mostra como a biblioteca `pywaffle` foi usada para mostrar pictorialmente o resultado das eleições dos EUA em 2016.\n",
         "\n",
@@ -92,11 +92,11 @@
       "metadata": {
         "id": "hAk6bw5TwQ_c",
         "colab_type": "code",
+        "outputId": "d7a19766-ee36-42ce-a6e5-cef4d6e5ccfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 182
-        },
-        "outputId": "d7a19766-ee36-42ce-a6e5-cef4d6e5ccfe"
+        }
       },
       "source": [
         "# importar as bibliotecas necessárias\n",
@@ -118,7 +118,7 @@
         "fig.set_tight_layout(False)\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,11 +154,11 @@
       "metadata": {
         "id": "8AjO5zZN1obp",
         "colab_type": "code",
+        "outputId": "5d14c5f7-b8d8-4e47-9530-57f7fb2ff5ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
-        },
-        "outputId": "5d14c5f7-b8d8-4e47-9530-57f7fb2ff5ef"
+        }
       },
       "source": [
         "# importar o pandas\n",
@@ -183,7 +183,7 @@
         "fig.set_tight_layout(False)\n",
         "plt.show();"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -216,11 +216,11 @@
       "metadata": {
         "id": "Aqno4q4G1_5X",
         "colab_type": "code",
+        "outputId": "21cefca8-88a5-4942-f62b-ec7861ded8a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 229
-        },
-        "outputId": "21cefca8-88a5-4942-f62b-ec7861ded8a3"
+        }
       },
       "source": [
         "# plotar homens e mulheres na sala de aula\n",
@@ -237,7 +237,7 @@
         "fig.set_tight_layout(False)\n",
         "plt.show();"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
