--- a/Como_Criar_uma_WordCloud_em_Python.ipynb
+++ b/Como_Criar_uma_WordCloud_em_Python.ipynb
@@ -32,6 +32,12 @@
       "source": [
         "# Como criar uma Wordcloud em Python\n",
         "\n",
+        "\n",
+        "\n",
+        "> Este *notebook* faz parte [deste artigo](http://sigmoidal.ai/como-criar-uma-wordcloud-em-python/) do *blog* Sigmoidal.\n",
+        "\n",
+        "\n",
+        "\n",
         "Veja como criar uma wordcloud usando Python com a ajuda da biblioteca `wordcloud`. Wordcloud (em português, nuvem de palavras ou nuvem de tags) é um tipo de visualização de dados muito poderoso, principalmente quando estamos trabalhando com textos, documentos, pesquisas, entre outras.\n",
         "\n",
         "Resumidamente, é como se você estivesse contando a frequência com que cada palavra aparece em um texto. Com essa frequência, você define tamanhos proporcionais às palavras, dispondo elas também em ângulos diferentes.\n",
@@ -92,11 +98,11 @@
       "metadata": {
         "id": "BtpnFVGqn-aM",
         "colab_type": "code",
+        "outputId": "cc5adb4e-17f3-4206-80cb-a3e41aa5f652",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "cc5adb4e-17f3-4206-80cb-a3e41aa5f652"
+        }
       },
       "source": [
         "# importar os pacotes necessários\n",
@@ -112,7 +118,7 @@
         "# eliminar as colunas com valores ausentes\n",
         "summary = df.dropna(subset=['summary'], axis=0)['summary']"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,11 +135,11 @@
       "metadata": {
         "id": "FLhOhy4ZmCRF",
         "colab_type": "code",
+        "outputId": "d6222bdc-c6b2-4020-a5ee-2fc603212eb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        },
-        "outputId": "d6222bdc-c6b2-4020-a5ee-2fc603212eb5"
+        }
       },
       "source": [
         "# exemplos de descrições para os imóveis no Airbnb\n",
@@ -141,7 +147,7 @@
         "display(summary.iloc[120])\n",
         "display(summary.iloc[133])"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -195,11 +201,11 @@
       "metadata": {
         "id": "wv9GuYell4Ic",
         "colab_type": "code",
+        "outputId": "5e1f71b9-f4ca-4ef3-add7-7bad5bafda26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "5e1f71b9-f4ca-4ef3-add7-7bad5bafda26"
+        }
       },
       "source": [
         "# concatenar as palavras\n",
@@ -208,7 +214,7 @@
         "# ver quantidade de palavras\n",
         "print(\"Quantidade de Palavras: {}\".format(len(all_summary)))"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,11 +242,11 @@
       "metadata": {
         "id": "Du2dAeC9vTDD",
         "colab_type": "code",
+        "outputId": "55fe98ff-d7b7-4ca7-d989-b78261dded1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 348
-        },
-        "outputId": "55fe98ff-d7b7-4ca7-d989-b78261dded1e"
+        }
       },
       "source": [
         "# lista de stopword\n",
@@ -260,7 +266,7 @@
         "plt.imshow(wordcloud);\n",
         "wordcloud.to_file(\"airbnb_summary_wordcloud.png\")"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,11 +328,11 @@
       "metadata": {
         "id": "zR9C0FoAwFXA",
         "colab_type": "code",
+        "outputId": "00d3a667-c086-47ec-c622-0b75906e9273",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "00d3a667-c086-47ec-c622-0b75906e9273"
+        }
       },
       "source": [
         "# endereço LOCAL da SUA imagem\n",
@@ -347,7 +353,7 @@
         "plt.imshow(wordcloud)\n",
         "wordcloud.to_file(\"airbnb_summary_wordcloud.png\")"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,11 +400,11 @@
       "metadata": {
         "id": "OURo-tcCxe9u",
         "colab_type": "code",
+        "outputId": "52a70521-794f-4262-c97d-4ae99a059563",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "52a70521-794f-4262-c97d-4ae99a059563"
+        }
       },
       "source": [
         "# endereço LOCAL da SUA imagem\n",
@@ -419,7 +425,7 @@
         "plt.imshow(wordcloud)\n",
         "wordcloud.to_file(\"airbnb_summary_wordcloud.png\")"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
