Corrigindo erro de digitação

--- a/Dados_Desbalanceados.ipynb
+++ b/Dados_Desbalanceados.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "No exemplo de detecção de fraude com cartões de crédito (onde o número de transações financeiras normais é bem maior que o número de transações fraudulentas), um classificador tenderá a apresentar muitos falsos negativos - uma situação indesejável para um banco, obviamente.\n",
         "\n",
-        "Em um *trade-off*, seria preferível \"errar para mais\" e ter uma quantidade maior de falsos negativos. Aliás, aposto que você já teve seu cartão bloqueado preventivamente e teve que ligar no banco para confirmar as últimas compras que havia feito, não é mesmo?!\n",
+        "Em um *trade-off*, seria preferível \"errar para mais\" e ter uma quantidade maior de falsos positivos. Aliás, aposto que você já teve seu cartão bloqueado preventivamente e teve que ligar no banco para confirmar as últimas compras que havia feito, não é mesmo?!\n",
         "\n",
         "Teoricamente, um *dataset* que possua qualquer classe com mais de 50% das entradas já é considerado desbalanceado. No entanto, há situações extremas onde você vai encontrar proporções maiores que 99:1.\n",
         "\n",
